[gd_scene load_steps=22 format=3 uid="uid://x0c0k7wt1t8u"]

[ext_resource type="Script" path="res://script/grinder/grindwheel.gd" id="1_uw4wv"]
[ext_resource type="Script" path="res://script/util/class/wheel_stats.gd" id="2_gd5nx"]
[ext_resource type="AudioStream" uid="uid://w4jg2q3un5o3" path="res://audio/sfx/bounce.wav" id="2_i25ww"]
[ext_resource type="Texture2D" uid="uid://d3mshby6wthon" path="res://sprite/gui/pointer.png" id="3_ncc8r"]
[ext_resource type="Texture2D" uid="uid://wof8boe0s7cg" path="res://sprite/env/Horror_Misc_08-128x128.png" id="4_8ld3e"]
[ext_resource type="AudioStream" uid="uid://o25xxxjad6xe" path="res://audio/sfx/lvlup.mp3" id="5_8q7xo"]
[ext_resource type="PackedScene" uid="uid://bjkmyvklh5di" path="res://object/weapons/bronzer.tscn" id="5_im651"]
[ext_resource type="AudioStream" uid="uid://be7a3kjxdenkm" path="res://audio/sfx/twirler.wav" id="5_qcflb"]
[ext_resource type="Texture2D" uid="uid://cl5ihqprbu6kr" path="res://sprite/env/Horror_Wall_09-128x128.png" id="6_qewsk"]
[ext_resource type="AudioStream" uid="uid://dsc4lj3vbtiwd" path="res://audio/sfx/newer/hit_danger.mp3" id="7_5yyiu"]
[ext_resource type="AudioStream" uid="uid://1gny76thsd0v" path="res://audio/sfx/stable_down.mp3" id="9_511sw"]

[sub_resource type="Resource" id="Resource_e6243"]
script = ExtResource("2_gd5nx")
dash_cooldown = 8
_movespeed = 16.0
damage = 40.0
rot_speed = 10.0
stability = 10
dash_max_charge = 6
health = 2000.0
bump_sound = ExtResource("2_i25ww")
hit_sound = ExtResource("7_5yyiu")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_yti04"]
height = 1.17485
radius = 1.46038

[sub_resource type="PrismMesh" id="PrismMesh_cpkab"]
size = Vector3(2, 3, 0.75)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_m7x28"]
shading_mode = 0
albedo_color = Color(1, 0, 0, 1)
albedo_texture = ExtResource("6_qewsk")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_88tdg"]
albedo_color = Color(0.192675, 0.1869, 0.21, 1)
albedo_texture = ExtResource("4_8ld3e")
metallic = 0.78
metallic_specular = 1.0
uv1_scale = Vector3(2, 2, 2)
uv2_scale = Vector3(2, 2, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6eyht"]
albedo_color = Color(1, 0, 0, 1)
albedo_texture = ExtResource("4_8ld3e")
uv1_scale = Vector3(0.5, 0.5, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ciyip"]
albedo_color = Color(0.46, 0.092, 0.0981332, 1)
albedo_texture = ExtResource("4_8ld3e")
uv1_scale = Vector3(1.5, 1.5, 1.5)

[sub_resource type="SphereShape3D" id="SphereShape3D_vt5kx"]
radius = 2.69406

[sub_resource type="SphereShape3D" id="SphereShape3D_0mvcy"]
radius = 1.5

[sub_resource type="SphereShape3D" id="SphereShape3D_tawae"]
radius = 1.89336

[node name="grindwheel" type="CharacterBody3D" groups=["Player"]]
script = ExtResource("1_uw4wv")
data = SubResource("Resource_e6243")

[node name="col" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.576487, 0)
shape = SubResource("CylinderShape3D_yti04")

[node name="mesh_body" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 0, 0)

[node name="Thorn" type="CSGMesh3D" parent="mesh_body"]
transform = Transform3D(1, 0, 0, 0, 0.573576, 0.819152, 0, -0.819152, 0.573576, 0, 1.2, -1.7)
mesh = SubResource("PrismMesh_cpkab")
material = SubResource("StandardMaterial3D_m7x28")

[node name="spin_root" type="Node3D" parent="mesh_body"]

[node name="CSGTorus3D" type="CSGTorus3D" parent="mesh_body/spin_root"]
transform = Transform3D(1, 0, 0, 0, 0.999211, -0.0397132, 0, 0.0397132, 0.999211, 0, 0.72968, -0.0184461)
inner_radius = 0.27
outer_radius = 1.64
smooth_faces = false
material = SubResource("StandardMaterial3D_88tdg")

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="mesh_body/spin_root"]
transform = Transform3D(1, 0, 0, 0, 0.999211, -0.0397132, 0, 0.0397132, 0.999211, 0, 2.01306, 0.0355355)
radius = 0.110892
height = 2.46236
material = SubResource("StandardMaterial3D_6eyht")

[node name="CSGCylinder3D2" type="CSGCylinder3D" parent="mesh_body/spin_root"]
transform = Transform3D(1, 0, 0, 0, 0.999211, -0.0397132, 0, 0.0397132, 0.999211, 0, 0.688982, -0.0170895)
radius = 1.0
height = 1.61994
material = SubResource("StandardMaterial3D_ciyip")

[node name="MeshInstance3D" type="MeshInstance3D" parent="mesh_body/spin_root"]

[node name="spinner_blade" type="Node3D" parent="mesh_body"]

[node name="saw_blade3" parent="mesh_body/spinner_blade" instance=ExtResource("5_im651")]
transform = Transform3D(18, 0, 0, 0, 17.9855, -0.722373, 0, 0.722373, 17.9855, 0, 0.935507, 0)

[node name="arrow_pointer" type="Node3D" parent="."]
rotation_edit_mode = 2
visible = false

[node name="Sprite3D" type="Sprite3D" parent="arrow_pointer"]
transform = Transform3D(-4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, 0, 0.250431, -3.07736)
gi_mode = 2
pixel_size = 0.04
texture_filter = 2
render_priority = 1
texture = ExtResource("3_ncc8r")

[node name="dir_pointer" type="Node3D" parent="."]
rotation_edit_mode = 2
visible = false

[node name="Sprite3D" type="Sprite3D" parent="dir_pointer"]
transform = Transform3D(-4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, 0, 0.636051, -3.07736)
gi_mode = 2
modulate = Color(1, 0, 0.219608, 1)
pixel_size = 0.04
texture_filter = 2
render_priority = 1
texture = ExtResource("3_ncc8r")

[node name="killsaw" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.894349, 0)
collision_layer = 4
collision_mask = 2
monitorable = false

[node name="saw_rad" type="CollisionShape3D" parent="killsaw"]
shape = SubResource("SphereShape3D_vt5kx")

[node name="hitbox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.208302, 0)
collision_layer = 16
collision_mask = 8
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="hitbox"]
shape = SubResource("SphereShape3D_0mvcy")

[node name="wheel_sfx" type="AudioStreamPlayer3D" parent="."]
volume_db = 2.0
max_polyphony = 3

[node name="attack_sfx" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("7_5yyiu")
volume_db = 4.0
max_distance = 423.72
max_polyphony = 3

[node name="lvl_sfx" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_8q7xo")
max_polyphony = 3

[node name="spin_sfx" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_qcflb")
volume_db = -5.052
unit_size = 15.0
max_db = -1.105
pitch_scale = 0.85
autoplay = true
max_distance = 80.0
panning_strength = 1.48

[node name="damage_sfx" type="AudioStreamPlayer3D" parent="."]

[node name="stability_sfx" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("9_511sw")
volume_db = 2.0
max_polyphony = 3

[node name="_dash_recharge" type="Timer" parent="."]
wait_time = 6.0

[node name="_spin_charge" type="Timer" parent="."]
wait_time = 0.6

[node name="_invuln_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="_stun_timer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="bump_radius" type="Area3D" parent="."]
collision_layer = 16
collision_mask = 32
monitorable = false

[node name="colie" type="CollisionShape3D" parent="bump_radius"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("SphereShape3D_tawae")

[connection signal="area_entered" from="killsaw" to="." method="_on_killsaw_area_entered"]
[connection signal="area_exited" from="killsaw" to="." method="_on_killsaw_area_exited"]
[connection signal="timeout" from="_dash_recharge" to="." method="_on__dash_recharge_timeout"]
[connection signal="timeout" from="_spin_charge" to="." method="_on__spin_charge_timeout"]
[connection signal="timeout" from="_invuln_timer" to="." method="_on__invuln_timer_timeout"]
[connection signal="timeout" from="_stun_timer" to="." method="_on__stun_timer_timeout"]
[connection signal="body_entered" from="bump_radius" to="." method="_on_bump_radius_body_entered"]
